--- a/basics/pdsh.ipynb
+++ b/basics/pdsh.ipynb
@@ -888,8 +888,247 @@
     "cols = ['population', 'area']\n",
     "states = pd.DataFrame({'population': population,\n",
     "                       'area': area})\n",
-    "states['population']\n",
+    "states['population']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    a\n",
+       "3    b\n",
+       "5    c\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.Series(['a', 'b', 'c'], index=[1, 3, 5])\n",
+    "data\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'b'"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.loc[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    a\n",
+       "3    b\n",
+       "5    c\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.iloc[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area</th>\n",
+       "      <th>pop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>California</th>\n",
+       "      <td>423967</td>\n",
+       "      <td>38332521</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Texas</th>\n",
+       "      <td>695662</td>\n",
+       "      <td>26448193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>New York</th>\n",
+       "      <td>141297</td>\n",
+       "      <td>19651127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Florida</th>\n",
+       "      <td>170312</td>\n",
+       "      <td>19552860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Illinois</th>\n",
+       "      <td>149995</td>\n",
+       "      <td>12882135</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              area       pop\n",
+       "California  423967  38332521\n",
+       "Texas       695662  26448193\n",
+       "New York    141297  19651127\n",
+       "Florida     170312  19552860\n",
+       "Illinois    149995  12882135"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "area = pd.Series({'California': 423967, 'Texas': 695662,\n",
+    "                  'New York': 141297, 'Florida': 170312,\n",
+    "                  'Illinois': 149995})\n",
+    "pop = pd.Series({'California': 38332521, 'Texas': 26448193,\n",
+    "                 'New York': 19651127, 'Florida': 19552860,\n",
+    "                 'Illinois': 12882135})\n",
+    "data = pd.DataFrame({'area':area, 'pop':pop})\n",
+    "data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area</th>\n",
+       "      <th>pop</th>\n",
+       "      <th>density</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>California</th>\n",
+       "      <td>423967</td>\n",
+       "      <td>38332521</td>\n",
+       "      <td>90.413926</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Texas</th>\n",
+       "      <td>695662</td>\n",
+       "      <td>26448193</td>\n",
+       "      <td>38.018740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>New York</th>\n",
+       "      <td>141297</td>\n",
+       "      <td>19651127</td>\n",
+       "      <td>139.076746</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Florida</th>\n",
+       "      <td>170312</td>\n",
+       "      <td>19552860</td>\n",
+       "      <td>114.806121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Illinois</th>\n",
+       "      <td>149995</td>\n",
+       "      <td>12882135</td>\n",
+       "      <td>85.883763</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              area       pop     density\n",
+       "California  423967  38332521   90.413926\n",
+       "Texas       695662  26448193   38.018740\n",
+       "New York    141297  19651127  139.076746\n",
+       "Florida     170312  19552860  114.806121\n",
+       "Illinois    149995  12882135   85.883763"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# data['pop']\n",
+    "# data.pop\n",
+    "data['density'] = data['pop'] / data['area']\n",
+    "data\n"
    ]
   },
   {
