--- a/basics/pdsh.ipynb
+++ b/basics/pdsh.ipynb
@@ -1133,6 +1133,133 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4.23967000e+05, 3.83325210e+07, 9.04139261e+01],\n",
+       "       [6.95662000e+05, 2.64481930e+07, 3.80187404e+01],\n",
+       "       [1.41297000e+05, 1.96511270e+07, 1.39076746e+02],\n",
+       "       [1.70312000e+05, 1.95528600e+07, 1.14806121e+02],\n",
+       "       [1.49995000e+05, 1.28821350e+07, 8.58837628e+01]])"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pop</th>\n",
+       "      <th>density</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>New York</th>\n",
+       "      <td>19651127</td>\n",
+       "      <td>139.076746</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Florida</th>\n",
+       "      <td>19552860</td>\n",
+       "      <td>114.806121</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               pop     density\n",
+       "New York  19651127  139.076746\n",
+       "Florida   19552860  114.806121"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.loc[data.density > 100, ['pop', 'density']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "area = pd.Series({'Alaska': 1723337, 'Texas': 695662,\n",
+    "                  'California': 423967}, name='area')\n",
+    "population = pd.Series({'California': 38332521, 'Texas': 26448193,\n",
+    "                        'New York': 19651127}, name='population')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Alaska              NaN\n",
+       "California    90.413926\n",
+       "New York            NaN\n",
+       "Texas         38.018740\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "population / area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
